--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -18,10 +18,10 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         @Html.Partial("PVCreateEditProduct", Model)
-
+        <br/>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Tạo mới" class="btn btn-success" />
                 @Html.ActionLink("Quay lại danh sách", "Index", null, new { @class = "btn btn-primary" })
             </div>
         </div>
