--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -1,45 +1,39 @@
-﻿@model IEnumerable<_24DH111577_LTW_BE_16_10.Models.Product>
-
+﻿@*@model IEnumerable<_24DH111577_LTW_BE_16_10.Models.Product>*@
+@model _24DH111577_LTW_BE_16_10.Models.ViewModel.ProductSearchVM
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Search Product";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
-
-<h2 class="bg-success">Danh sách sản phẩm</h2>
-
-
-<table class="table bg-info container-fluid">
-    <tr>
-        <th class="bg-success col-md-2">Hình ảnh</th>
-        <th class="bg-success col-md-3">Tên sản phẩm</th>
-        <th class="bg-success col-md-1">Đơn giá</th>
-        <th class="bg-success col-md-2">Danh mục</th>
-        <th class="bg-success col-md-4"></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td><img src="@Html.DisplayFor(modelItem => item.ProductImage)"/></td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductPrice)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category.CategoryName)
-        </td>
-        <td>
-            @Html.ActionLink("Sửa", "Edit", new { id=item.ProductID }, new { @class="btn btn-primary btn-sm"} ) |
-            @Html.ActionLink("Chi tiết", "Details", new { id=item.ProductID }, new { @class = "btn btn-primary btn-sm" }) |
-            @Html.ActionLink("Xóa", "Delete", new { id=item.ProductID }, new { @class = "btn btn-primary btn-sm" })
-        </td>
-    </tr>
-}
-
-</table>
-<div class="form-group">
-    <div class="col-md-offset-8 col-md-4">
-            @Html.ActionLink("Thêm mới", "Create",null, new { @class= "btn-primary"})
-    </div>
-</div>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width"/>
+    <title>Search</title>
+    <style>
+        .search-container .order-container{
+            padding-top:20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
+</head>
+<body>
+    @using (Html.BeginForm("Index", "Products", FormMethod.Get))
+            {
+                <div class="form-group search-container">
+                    @Html.TextBoxFor(m => m.SearchTerm, new { @class = "form-control", placeholder = "Nhập tên, mô tả hoặc loại sản phẩm" })
+                    @Html.TextBoxFor(m => m.MinPrice, new { @class = "form-control", placeholder = "Nhập giá tối thiểu", type = "number" })
+                    @Html.TextBoxFor(m => m.MaxPrice, new { @class = "form-control", placeholder = "Nhập giá tối đa", type = "number" })
+                    <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                </div>
+                <div class="form-group order-container">
+                    Sắp xếp theo:
+                    @Html.ActionLink("Tên tăng dần", "Index", new { sortOrder = "name_asc", searchTerm = Model.SearchTerm })
+                    @Html.ActionLink("Tên giảm dần", "Index", new { sortOrder = "name_desc", searchTerm = Model.SearchTerm })
+                    @Html.ActionLink("Giá tăng dần", "Index", new { sortOrder = "price_asc", searchTerm = Model.SearchTerm })
+                    @Html.ActionLink("Giá giảm dần", "Index", new { sortOrder = "price_desc", searchTerm = Model.SearchTerm })
+                </div>
+            }
+    @Html.Partial("PVListProduct",Model)
+</body>
+</html>
