--- a/Areas/Admin/Views/Products/PVCreateEditProduct.cshtml
+++ b/Areas/Admin/Views/Products/PVCreateEditProduct.cshtml
@@ -49,7 +49,7 @@
 <div class="form-group">
     <div class="control-label col-md-2">Hình ảnh</div>
     <div class="col-md-10">
-        @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
+        @*@Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })*@
         @Html.TextBoxFor(model => model.UploadImg, new { htmlAttributes = new { @type = "file" } })
         @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
     </div>
