--- a/Areas/Admin/Views/Products/PVCreateEditProduct.cshtml
+++ b/Areas/Admin/Views/Products/PVCreateEditProduct.cshtml
@@ -1,7 +1,7 @@
 ﻿@model _24DH111577_LTW_BE_16_10.Models.Product
 <head>
     <style>
-        textarea{
+        textarea {
             width: 100%;
             height: 150px;
             padding: 12px 5px;
@@ -46,11 +46,24 @@
 </div>
 
 
+@*<div class="form-group">
+        <div class="control-label col-md-2">Hình ảnh</div>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextBoxFor(model => model.UploadImg, new { htmlAttributes = new { @type = "file" } })
+            @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
+        </div>
+    </div>*@
 <div class="form-group">
-    <div class="control-label col-md-2">Hình ảnh</div>
+    <div class="control-label col-md-2">Link ảnh</div>
     <div class="col-md-10">
-        @*@Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })*@
-        @Html.TextBoxFor(model => model.UploadImg, new { htmlAttributes = new { @type = "file" } })
+        @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
     </div>
 </div>
+@*<div class="form-group">
+    <div class="control-label col-md-2">Tải ảnh lên</div>
+    <div class="col-md-10">
+        @Html.TextBox("UploadImg", "", new { type = "file", @class = "form-control" })
+    </div>
+</div>*@
