--- a/Areas/Customer/Views/Account/Login.cshtml
+++ b/Areas/Customer/Views/Account/Login.cshtml
@@ -1,8 +1,51 @@
-﻿
+﻿@model _24DH111577_LTW_BE_16_10.Models.ViewModel.LoginVM
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Đăng nhập";
     Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
 }
 
-<h2>Login</h2>
+<style>
+    .accountbtn {
+        width: 275px;
+        height: 40px;
+        border: 1px solid #808080;
+        margin: 5px;
+        align-items: center;
+    }
+</style>
+
+@using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="col-md-6" style="text-align:center;">
+        <h2>Đăng nhập</h2>
+    </div>
+
+    @* Tên đăng nhập *@
+    <div class="form-group">
+        @Html.LabelFor(m => m.Username, new { @class = "control-label col-md-2" })
+        <div class="col-md-4">
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Username)
+        </div>
+    </div>
+
+    @* mật khẩu *@
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "control-label col-md-2" })
+        <div class="col-md-4">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Password)
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-4">
+            <input type="submit" value="Đăng nhập" class="btn btn-info accountbtn" /><br />
+            <p>Bạn Chưa Có Tài Khoản? <a href="@Url.Action("Register", "Account", null)" />Đăng ký ngay</p>
+        </div>
+    </div>
+}
 
