--- a/Areas/Customer/Views/Account/Index.cshtml
+++ b/Areas/Customer/Views/Account/Index.cshtml
@@ -1,58 +1,76 @@
-﻿@model IEnumerable<_24DH111577_LTW_BE_16_10.Models.Customer>
+﻿@model _24DH111577_LTW_BE_16_10.Models.Customer
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Edit Profile";
     Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <h2>Edit Profile</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerEmail)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User.Password)
-        </th>
-        <th></th>
-    </tr>
+    @if (TempData["Debug"] != null)
+    {
+        <div class="alert alert-info">
+            <pre>@TempData["Debug"]</pre>
+        </div>
+    }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomerName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomerPhone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomerEmail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CustomerAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Password)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CustomerID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CustomerID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CustomerID })
-        </td>
-    </tr>
-}
+    @if (TempData["Message"] != null)
+    {
+        <div class="alert alert-success">
+            @TempData["Message"]
+        </div>
+    }
 
-</table>
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Update Contact Information</h4>
+                    @using (Html.BeginForm("UpdateContact", "Account", FormMethod.Post))
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group mb-3">
+                            <label>Phone Number:</label>
+                            @Html.TextBoxFor(m => m.CustomerPhone, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group mb-3">
+                            <label>Email:</label>
+                            @Html.TextBoxFor(m => m.CustomerEmail, new { @class = "form-control", type = "email" })
+                        </div>
+                        <div class="form-group mb-3">
+                            <label>Address:</label>
+                            @Html.TextAreaFor(m => m.CustomerAddress, new { @class = "form-control" })
+                        </div>
+                        <button type="submit" class="btn btn-primary">Update Contact Info</button>
+                    }
+                </div>
+
+                <div class="col-md-6">
+                    <h4>Change Password</h4>
+                    @using (Html.BeginForm("ChangePassword", "Account", FormMethod.Post))
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group mb-3">
+                            <label>Current Password:</label>
+                            <input type="password" name="currentPassword" class="form-control" required />
+                        </div>
+                        <div class="form-group mb-3">
+                            <label>New Password:</label>
+                            <input type="password" name="newPassword" class="form-control" required />
+                        </div>
+                        <div class="form-group mb-3">
+                            <label>Confirm New Password:</label>
+                            <input type="password" name="confirmPassword" class="form-control" required />
+                        </div>
+                        <button type="submit" class="btn btn-warning">Change Password</button>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="mt-3">
+        @Html.ActionLink("Back to Profile", "ProfileInfo", "Account", null, new { @class = "btn btn-secondary" })
+    </div>
+</div>
