--- a/Areas/Customer/Views/Home/ProductDetails.cshtml
+++ b/Areas/Customer/Views/Home/ProductDetails.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "ProductDetails";
-    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
+    Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
 }
 
 <head>
@@ -36,6 +36,14 @@
             font-weight: lighter;
         }
     </style>
+    <script>
+    function updateEstimate() {
+        var quantity = parseInt(document.getElementById('quantityInput').value) || 1;
+        var unitPrice = @Model.product.ProductPrice;
+        var estimate = quantity * unitPrice;
+        document.getElementById('estimateDisplay').innerText = estimate.toLocaleString('vi-VN');
+    }
+    </script>
 </head>
 
 <div class="container-fluid pro">
@@ -59,29 +67,57 @@
             </div>
         </div>
         @* khối Related Product *@
-        <div>@Html.Partial("_PVRelatedProduct", Model)</div>
+        <div>@Html.Partial("PVRelatedProduct", Model)</div>
         @* khối bên phải *@
+        <!--<div class="col-md-3 pro-section">
+        <div class="form-group">-->
+        @* Phần tạm tính *@
+        <!--@using (Html.BeginForm("ProductDetails", "Home", FormMethod.Get))
+            {
+                <h4><strong>Số lượng</strong></h4>
+                <p>
+                    @Html.TextBoxFor(model => model.quantity, new
+                 { @class = "form-control", @type = "number", @min = 1 })
+                </p>
+                <h4><strong>Tạm tính</strong></h4>
+                <p>@Model.estimatedValue.ToString("N0")</p>
+                @Html.ActionLink("Thêm vào giỏ hàng", "AddToCart", "Cart",
+                    new { id = Model.product.ProductID, quantity = Model.quantity },
+                    new { @class = "btn btn-info" })
+            }
+        </div>
+    </div>-->
+        @*New*@
+
         <div class="col-md-3 pro-section">
             <div class="form-group">
                 @* Phần tạm tính *@
-                @using (Html.BeginForm("ProductDetails", "Home", FormMethod.Get))
+                @using (Html.BeginForm("AddToCart", "Cart", FormMethod.Post))
                 {
+                    @Html.Hidden("id", Model.product.ProductID)
+
                     <h4><strong>Số lượng</strong></h4>
                     <p>
-                        @Html.TextBoxFor(model => model.quantity, new
-                     { @class = "form-control", @type = "number", @min = 1 })
+                        <input type="number"
+                               id="quantityInput"
+                               name="quantity"
+                               value="@Model.quantity"
+                               min="1"
+                               class="form-control"
+                               onchange="updateEstimate()"
+                               oninput="updateEstimate()" />
                     </p>
+
                     <h4><strong>Tạm tính</strong></h4>
-                    <p>@Model.estimatedValue.ToString("N0")</p>
-                    @Html.ActionLink("Thêm vào giỏ hàng", "AddToCart", "Cart",
-                        new { id = Model.product.ProductID, quantity = Model.quantity },
-                        new { @class = "btn btn-info" })
+                    <p><span id="estimateDisplay">@Model.estimatedValue.ToString("N0")</span> VND</p>
+
+                    <button type="submit" class="btn btn-info">Thêm vào giỏ hàng</button>
                 }
             </div>
         </div>
         <hr />
         @* Khối TopProduct *@
-        <div>@Html.Partial("_PVTopProduct", Model)</div>
+        <div>@Html.Partial("PVTopProduct", Model)</div>
     </div>
 </div>
 
