update cai gi do k nho ten

--- a/Areas/Customer/Views/Account/ProfileInfo.cshtml
+++ b/Areas/Customer/Views/Account/ProfileInfo.cshtml
@@ -6,12 +6,12 @@
 }
 
 <div class="container">
-    <h2>Profile Information</h2>
+    <h2>Thông tin tài khoản </h2>
     <div class="card">
         <div class="card-body">
             <div class="row mb-3">
                 <div class="col-md-3">
-                    <strong>Full Name:</strong>
+                    <strong>Họ tên:</strong>
                 </div>
                 <div class="col-md-9">
                     @Html.DisplayFor(model => model.CustomerName)
@@ -20,7 +20,7 @@
 
             <div class="row mb-3">
                 <div class="col-md-3">
-                    <strong>Phone Number:</strong>
+                    <strong>Số điện thoại:</strong>
                 </div>
                 <div class="col-md-9">
                     @Html.DisplayFor(model => model.CustomerPhone)
@@ -38,7 +38,7 @@
 
             <div class="row mb-3">
                 <div class="col-md-3">
-                    <strong>Address:</strong>
+                    <strong>Địa chỉ:</strong>
                 </div>
                 <div class="col-md-9">
                     @Html.DisplayFor(model => model.CustomerAddress)
