--- a/Areas/Customer/Views/Home/PVFeatureProduct.cshtml
+++ b/Areas/Customer/Views/Home/PVFeatureProduct.cshtml
@@ -1,5 +1,5 @@
 ﻿@model _24DH111577_LTW_BE_16_10.Models.ViewModel.HomeProductVM
-    <link rel="stylesheet" type="text/css" href="~/Content/CustomerHome.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/PagedList.css" />
 
 @if (Model.FeatureProducts != null && Model.FeatureProducts.Any())
             {
