--- a/Areas/Customer/Views/Home/PVNewProduct.cshtml
+++ b/Areas/Customer/Views/Home/PVNewProduct.cshtml
@@ -1,6 +1,6 @@
 ﻿@model _24DH111577_LTW_BE_16_10.Models.ViewModel.HomeProductVM
 @using PagedList.Mvc
-<link rel="stylesheet" type="text/css" href="~/Content/CustomerHome.css" />
+<link rel="stylesheet" type="text/css" href="~/Content/PagedList.css" />
 @if (Model.NewProducts != null && Model.NewProducts.Any())
 {
     <section class="container-fluid listProd">
